--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>VOID BOT</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="space">
 
@@ -11,10 +11,11 @@
     <h1 class="title">VOID BOT</h1>
 
     <div class="buttons">
-      <a href="commands.html" class="btn">봇 명령어 보기</a>
-      <a href="install.html" class="btn">봇 설치</a>
+      <a href="guide.html" class="btn">🤖 봇 명령어 보기</a>
+      <a href="install.html" class="btn">⚙️ 봇 설치</a>
     </div>
   </div>
-
+<canvas id="stars"></canvas>
+<script src="stars.js"></script>
 </body>
 </html>
