--- a/install.html
+++ b/install.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>VOID BOT - Install</title>
+  <meta charset="UTF-8">
+  <title>VOID BOT - 설치</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <h1>봇 설치 페이지</h1>
-  <p>나중에 채울 예정</p>
+<body class="space center">
+
+  <h1>⚙️ 봇 설치 가이드</h1>
+
+  <div class="box">
+    <h2>𝗦𝘁𝗲𝗽 𝟭</h2>
+    <a href="https://open.kakao.com/o/pqDqhxei" target="_blank">
+      👉 오픈채팅 입장
+    </a>
+
+    <h2>𝗦𝘁𝗲𝗽 𝟮</h2>
+    <a href="https://open.kakao.com/me/VOIDBOT" target="_blank">
+      👉 VOID BOT 프로필 하트
+    </a>
+
+    <p class="desc">
+      모든 작업 후 방 링크를 첨부하고 대기해주세요.
+    </p>
+  </div>
+
+  <a href="index.html" class="btn back">← 메인으로</a>
+
 </body>
 </html>
